# elide

./: .bazelproject  WORKSPACE  buf.yaml  maven_install.json  package.json
.github/codesql/: codeql-config.yml
.github/workflows/: codeql-analysis.yml  main.yml
elide/proto/core/: BUILD.bazel  datamodel.proto
java/elide/: Application.java  ApplicationBoot.java  BUILD.bazel
java/elide/driver/: BUILD.bazel
java/elide/driver/firestore/: BUILD.bazel  FirestoreAdapter.java  FirestoreDriver.java  FirestoreManager.java  FirestoreTransportConfig.java  package-info.java
java/elide/driver/inmemory/: BUILD.bazel  InMemoryAdapter.java  InMemoryCache.java  InMemoryDriver.java
java/elide/driver/redis/: BUILD.bazel  RedisAdapter.java  RedisCache.java  RedisDriver.java  RedisEncodedModelCodec.java  RedisInternals.java  package-info.java
java/elide/driver/spanner/: BUILD.bazel  SpannerAdapter.java  SpannerCodec.java  SpannerDriver.java  SpannerDriverSettings.java  SpannerGeneratedDDL.java  SpannerManager.java  SpannerMutationSerializer.java  SpannerStructDeserializer.java  SpannerTemporalConverter.java  SpannerTransportConfig.java  SpannerUtil.java  package-info.java
java/elide/model/: BUILD.bazel  CollapsedMessageCodec.java  DatabaseAdapter.java  DatabaseDriver.java  EncodedModel.java  ModelAdapter.java  ObjectModelCodec.kt  ObjectModelDeserializer.kt  ObjectModelSerializer.kt  PersistenceDriver.java  QueryOptions.java  QueryableAdapter.java  QueryableBase.java  QueryableDriver.java  WriteOptions.java
java/elide/runtime/: Logging.java
java/elide/runtime/jvm/: AssetManager.java  BUILD.bazel
java/elide/transport/: BUILD.bazel  GoogleAPIChannel.java  GoogleService.java  GoogleTransportConfig.java  GoogleTransportManager.java  GrpcTransportConfig.java  GrpcTransportCredentials.java  PooledTransportConfig.java  TransportConfig.java  TransportCredentials.java  TransportException.java  TransportManager.java  package-info.java
java/elide/util/json/: BUILD.bazel  JSON.kt  JSONProtoSerializer.kt  JacksonConfigurator.kt  JacksonDatabindConfigurator.kt  package-info.java
java/elide/util/proto/: BUILD.bazel  Protobuf.kt  package-info.java
javatests/: application.yml  logback-test.xml
javatests/elide/driver/: BUILD.bazel
javatests/elide/driver/firestore/: BUILD.bazel  FirestoreAdapterTest.java
javatests/elide/driver/inmemory/: InMemoryAdapterTest.java  InMemoryAdapterWithCacheTest.java  InMemoryDriverTest.java
javatests/elide/driver/redis/: BUILD.bazel  RedisAdapterTest.java
javatests/elide/driver/spanner/: BUILD.bazel  SpannerAdapterTest.java  SpannerDDLTest.java  SpannerManagerTest.java  SpannerTemporalConverterTest.java  SpannerUtilTest.java
javatests/elide/model/: GenericPersistenceDriverTest.java
javatests/elide/runtime/jvm/: AssetManagerFailTest.java  AssetManagerTest.java  BUILD.bazel
javatests/elide/util/json/: BUILD.bazel  JacksonToolsTest.java
javatests/elide/util/proto/: BUILD.bazel  ProtoCodecTest.java  mock-proto.json
tools/: config.bzl
tools/bazel/: base.bazelrc  graalvm.bazelrc
tools/bundler/: BUILD.bazel
tools/config/: BUILD.bazel
tools/defs/: targets.bzl
tools/defs/conditions/: BUILD.bazel
tools/defs/java/: server.bzl
tools/defs/kt/toolchain/: BUILD.bazel
tools/defs/micronaut/: cli.bzl  data.bzl  logic.bzl  micronaut.bzl
tools/defs/model/: internals.bzl  service.bzl
