##
# Copyright © 2022, The Elide Framework Authors. All rights reserved.
#
# The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
# are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
# this code in object or source form requires and implies consent and agreement to that license in principle and
# practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
# Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
# Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
# by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
# is strictly forbidden except in adherence with assigned license requirements.
##

package(
    default_visibility = ["//visibility:public"],
)

load(
    "//tools/defs/java:java.bzl",
    "java_library",
    "maven",
)
load(
    "//tools/defs/model:model.bzl",
    "javaproto",
)

_COMMON_DEPS = [
    "//java/elide/runtime",
    "//java/elide/runtime/jvm",
    "@com_google_protobuf//:protobuf_java",
    maven("javax.annotation:javax.annotation.api"),
    maven("jakarta.inject:jakarta.inject-api"),
    maven("com.google.code.findbugs:jsr305"),
    maven("com.google.errorprone:error_prone_annotations"),
    maven("org.slf4j:slf4j-api"),
    maven("com.google.cloud:google-cloud-firestore"),
    maven("com.google.guava:guava"),
    maven("io.grpc:grpc-alts"),
    maven("io.micronaut:micronaut-inject"),
    maven("io.micronaut:micronaut-runtime"),
    maven("io.micronaut:micronaut-context"),
    maven("org.reactivestreams:reactive-streams"),
    maven("javax.validation:validation-api"),
]


java_library(
    name = "package-info",
    srcs = ["package-info.java"],
)

java_library(
    name = "FirestoreAdapter",
    srcs = ["FirestoreAdapter.java"],
    deps = [
        ":FirestoreDriver",
        "//java/elide/model:CollapsedMessage",
        "//java/elide/model:CollapsedMessageCodec",
        "//java/elide/model:CacheDriver",
        "//java/elide/model:DatabaseAdapter",
        "//java/elide/model:DatabaseDriver",
        "//java/elide/model:ModelCodec",
        "//java/elide/model:ModelMetadata",
        "//java/elide/model:PersistenceDriver",
        "//java/elide/transport:GoogleService",
        "//java/elide/transport:GoogleTransportConfig",
        "//java/elide/transport:GoogleTransportManager",
    ] + _COMMON_DEPS,
)

java_library(
    name = "FirestoreDriver",
    srcs = ["FirestoreDriver.java"],
    deps = [
        "//java/elide/model:CollapsedMessage",
        "//java/elide/model:CollapsedMessageCodec",
        "//java/elide/model:DatabaseDriver",
        "//java/elide/model:DeleteOptions",
        "//java/elide/model:FetchOptions",
        "//java/elide/model:ModelCodec",
        "//java/elide/model:ModelDeserializer",
        "//java/elide/model:ModelInflateException",
        "//java/elide/model:ModelMetadata",
        "//java/elide/model:ObjectModelCodec",
        "//java/elide/model:ObjectModelSerializer",
        "//java/elide/model:ObjectModelDeserializer",
        "//java/elide/model:OperationOptions",
        "//java/elide/model:SerializedModel",
        "//java/elide/model:UpdateOptions",
        "//java/elide/model:WriteOptions",
        "//java/elide/model:WriteProxy",
        "//java/elide/transport:GoogleService",
        "//java/elide/transport:GoogleTransportManager",
        javaproto("//elide/proto/core:datamodel"),
        maven("io.grpc:grpc-api"),
        maven("com.google.api:gax"),
        maven("com.google.api:gax-grpc"),
        maven("com.google.api:api-common"),
        maven("com.google.cloud:google-cloud-core"),
        maven("com.google.cloud:google-cloud-core-grpc"),
    ] + _COMMON_DEPS,
    exports = [
        "//java/elide/runtime/jvm:ReactiveFuture",
        "//java/elide/model:ModelMetadata",
        maven("io.grpc:grpc-api"),
        maven("io.grpc:grpc-core"),
        maven("io.grpc:grpc-auth"),
        maven("io.grpc:grpc-stub"),
        maven("io.grpc:grpc-protobuf"),
        maven("com.google.api:gax"),
        maven("com.google.api:gax-grpc"),
        maven("com.google.cloud:google-cloud-core"),
        maven("com.google.cloud:google-cloud-core-grpc"),
    ],
)

java_library(
    name = "FirestoreTransportConfig",
    srcs = ["FirestoreTransportConfig.java"],
    deps = [
        "//java/elide/transport:GoogleTransportManager",
        "//java/elide/transport:GrpcTransportConfig",
    ] + _COMMON_DEPS,
)

java_library(
    name = "firestore",
    exports = [
        ":package-info",
        ":FirestoreAdapter",
        ":FirestoreDriver",
        ":FirestoreTransportConfig",
    ],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]),
)