##
# Copyright © 2022, The Elide Framework Authors. All rights reserved.
#
# The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
# are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
# this code in object or source form requires and implies consent and agreement to that license in principle and
# practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
# Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
# Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
# by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
# is strictly forbidden except in adherence with assigned license requirements.
##

package(
    default_visibility = ["//visibility:public"],
)

load(
    "//tools/defs/java:java.bzl",
    "java_library",
    "maven",
)
load(
    "//tools/defs/model:model.bzl",
    "javaproto",
)

_COMMON_DEPS = [
    "//java/elide/runtime",
    "//java/elide/runtime/jvm",
    "//java/elide/model:ModelMetadata",
    "@com_google_protobuf//java/util",
    "@com_google_protobuf//:protobuf_java",
    maven("javax.annotation:javax.annotation.api"),
    maven("jakarta.inject:jakarta.inject-api"),
    maven("com.google.code.findbugs:jsr305"),
    maven("com.google.errorprone:error_prone_annotations"),
    maven("org.slf4j:slf4j-api"),
    maven("com.google.api:api-common"),
    maven("com.google.api:gax"),
    maven("com.google.api:gax-grpc"),
    maven("com.google.cloud:google-cloud-core-grpc"),
    maven("com.google.cloud:google-cloud-spanner"),
    maven("com.google.cloud:google-cloud-core"),
    maven("io.grpc:grpc-api"),
    maven("io.grpc:grpc-core"),
    maven("io.grpc:grpc-auth"),
    maven("io.grpc:grpc-stub"),
    maven("io.grpc:grpc-protobuf"),
    maven("com.google.guava:guava"),
    maven("io.grpc:grpc-alts"),
    maven("io.micronaut:micronaut-inject"),
    maven("io.micronaut:micronaut-runtime"),
    maven("io.micronaut:micronaut-context"),
    maven("org.reactivestreams:reactive-streams"),
    maven("javax.validation:validation-api"),
    maven("com.google.api.grpc:proto-google-common-protos"),
]

java_library(
    name = "package-info",
    srcs = ["package-info.java"],
)

java_library(
    name = "SpannerAdapter",
    srcs = ["SpannerAdapter.java"],
    deps = [
        ":SpannerDriverSettings",
        ":SpannerDriver",
        ":SpannerCodec",
        ":SpannerStructDeserializer",
        ":SpannerMutationSerializer",
        "//java/elide/model:CacheDriver",
        "//java/elide/model:DatabaseAdapter",
        "//java/elide/model:DatabaseDriver",
        "//java/elide/model:ModelCodec",
        "//java/elide/model:PersistenceDriver",
        "//java/elide/transport:GoogleService",
        "//java/elide/transport:GoogleTransportConfig",
        "//java/elide/transport:GoogleTransportManager",
    ] + _COMMON_DEPS,
)

java_library(
    name = "SpannerCodec",
    srcs = ["SpannerCodec.java"],
    deps = [
        ":SpannerDriverSettings",
        ":SpannerMutationSerializer",
        ":SpannerStructDeserializer",
        "//java/elide/model:ModelSerializer",
        "//java/elide/model:ModelDeserializer",
        "//java/elide/model:ModelCodec",
    ] + _COMMON_DEPS,
)

java_library(
    name = "SpannerDriver",
    srcs = ["SpannerDriver.java"],
    deps = [
        ":SpannerCodec",
        ":SpannerDriverSettings",
        ":SpannerMutationSerializer",
        ":SpannerStructDeserializer",
        ":SpannerUtil",
        "//java/elide/model:DatabaseDriver",
        "//java/elide/model:DeleteOptions",
        "//java/elide/model:FetchOptions",
        "//java/elide/model:ModelCodec",
        "//java/elide/model:OperationOptions",
        "//java/elide/model:SerializedModel",
        "//java/elide/model:UpdateOptions",
        "//java/elide/model:WriteOptions",
        "//java/elide/model:WriteProxy",
        "//java/elide/transport:GoogleService",
        "//java/elide/transport:GoogleTransportManager",
        javaproto("//elide/proto/core:datamodel"),
    ] + _COMMON_DEPS,
)

java_library(
    name = "SpannerDriverSettings",
    srcs = ["SpannerDriverSettings.java"],
    deps = [
        ":SpannerTransportConfig",
    ] + _COMMON_DEPS,
)

java_library(
    name = "SpannerGeneratedDDL",
    srcs = ["SpannerGeneratedDDL.java"],
    deps = [
        ":SpannerDriverSettings",
        ":SpannerUtil",
        javaproto("//elide/proto/core:datamodel"),
    ] + _COMMON_DEPS,
)

java_library(
    name = "SpannerManager",
    srcs = ["SpannerManager.java"],
    deps = [
        ":SpannerAdapter",
        ":SpannerDriver",
        ":SpannerDriverSettings",
        "//java/elide/model:CacheDriver",
        "//java/elide/model:DatabaseManager",
    ] + _COMMON_DEPS,
)

java_library(
    name = "SpannerMutationSerializer",
    srcs = ["SpannerMutationSerializer.java"],
    deps = [
        ":SpannerUtil",
        ":SpannerDriverSettings",
        ":SpannerTemporalConverter",
        "//java/elide/model:ModelDeflateException",
        "//java/elide/model:ModelSerializer",
        javaproto("//elide/proto/core:datamodel"),
    ] + _COMMON_DEPS,
)

java_library(
    name = "SpannerStructDeserializer",
    srcs = ["SpannerStructDeserializer.java"],
    deps = [
        ":SpannerUtil",
        ":SpannerDriverSettings",
        ":SpannerTemporalConverter",
        "//java/elide/model:ModelDeserializer",
        "//java/elide/model:ModelInflateException",
        javaproto("//elide/proto/core:datamodel"),
    ] + _COMMON_DEPS,
)

java_library(
    name = "SpannerTemporalConverter",
    srcs = ["SpannerTemporalConverter.java"],
    deps = [
        # None yet.
    ] + _COMMON_DEPS,
)

java_library(
    name = "SpannerTransportConfig",
    srcs = ["SpannerTransportConfig.java"],
    deps = [
        "//java/elide/transport:GoogleTransportManager",
        "//java/elide/transport:GrpcTransportConfig",
    ] + _COMMON_DEPS,
)

java_library(
    name = "SpannerUtil",
    srcs = ["SpannerUtil.java"],
    deps = [
        ":SpannerDriverSettings",
        "//java/elide/util:Pair",
        javaproto("//elide/proto/core:datamodel"),
    ] + _COMMON_DEPS,
)

java_library(
    name = "spanner",
    exports = [
        ":SpannerAdapter",
        ":SpannerCodec",
        ":SpannerDriver",
        ":SpannerDriverSettings",
        ":SpannerManager",
        ":SpannerMutationSerializer",
        ":SpannerStructDeserializer",
        ":SpannerTransportConfig",
        ":SpannerUtil",
        ":package-info",
        maven("io.grpc:grpc-api"),
        maven("io.grpc:grpc-core"),
        maven("io.grpc:grpc-auth"),
        maven("io.grpc:grpc-stub"),
        maven("io.grpc:grpc-protobuf"),
        maven("com.google.api:gax"),
        maven("com.google.api:gax-grpc"),
        maven("com.google.cloud:google-cloud-core"),
        maven("com.google.cloud:google-cloud-core-grpc"),
    ],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]),
)
