##
# Copyright © 2022, The Elide Framework Authors. All rights reserved.
#
# The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
# are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
# this code in object or source form requires and implies consent and agreement to that license in principle and
# practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
# Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
# Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
# by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
# is strictly forbidden except in adherence with assigned license requirements.
##

package(
    default_visibility = ["//visibility:public"],
)

load(
    "//tools/defs/java/testing:junit5.bzl",
    java_test = "java_junit5_test",
)
load(
    "//tools/defs/java:java.bzl",
    "maven",
)
load(
    "//tools/defs/model:model.bzl",
    "javaproto",
)

_COMMON_DEPS = [
    "//java/elide/runtime",
    "//java/elide/runtime/jvm",
    maven("com.google.guava:guava"),
    maven("com.google.protobuf:protobuf-java"),
    maven("org.slf4j:slf4j-api"),
    maven("com.google.truth:truth"),
    maven("com.google.truth.extensions:truth-java8-extension"),
    maven("com.google.truth.extensions:truth-proto-extension"),
    maven("com.google.cloud:google-cloud-firestore"),
    maven("org.testcontainers:testcontainers"),
    maven("org.testcontainers:junit-jupiter"),
    maven("org.testcontainers:gcloud"),
]


java_test(
    name = "FirestoreAdapterTest",
    srcs = ["FirestoreAdapterTest.java"],
    test_package = "elide.driver.firestore",
    deps = [
        "//java/elide/driver/firestore:FirestoreAdapter",
        "//java/elide/driver/firestore:FirestoreDriver",
        "//java/elide/driver/inmemory:InMemoryCache",
        javaproto("//javatests/elide/model:person"),
        "//javatests/elide/model:GenericPersistenceAdapterTest",
    ] + _COMMON_DEPS,
)

test_suite(
    name = "firestore",
    tests = [
        ":FirestoreAdapterTest",
    ],
)
