##
# Copyright © 2022, The Elide Framework Authors. All rights reserved.
#
# The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
# are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
# this code in object or source form requires and implies consent and agreement to that license in principle and
# practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
# Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
# Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
# by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
# is strictly forbidden except in adherence with assigned license requirements.
##

package(
    default_visibility = ["//visibility:public"],
)

load(
    "//tools/defs/java:java.bzl",
    "maven",
)
load(
    "//tools/defs/model:model.bzl",
    "javaproto",
)
load(
    "//tools/defs/java/testing:junit5.bzl",
    java_test = "java_junit5_test",
)

SPANNER_EMULATOR_VERSION = "1.2.0"

SPANNER_MODE = "EMULATOR"

SPANNER_PROJECT = "elide-dev"

SPANNER_INSTANCE = "testing"

SPANNER_DATABASE = "tstdb"

_COMMON_DEPS = [
    "//java/elide/runtime",
    "//java/elide/runtime/jvm",
    maven("com.google.api:gax"),
    maven("com.google.api:gax-grpc"),
    maven("com.google.guava:guava"),
    maven("com.google.protobuf:protobuf-java"),
    maven("com.google.api.grpc:proto-google-common-protos"),
    maven("com.google.cloud:google-cloud-core"),
    maven("com.google.cloud:google-cloud-core-grpc"),
    maven("com.google.cloud:google-cloud-spanner"),
    maven("com.google.truth:truth"),
    maven("com.google.truth.extensions:truth-proto-extension"),
    maven("com.google.truth.extensions:truth-java8-extension"),
    maven("io.grpc:grpc-api"),
    maven("io.grpc:grpc-core"),
    maven("io.grpc:grpc-auth"),
    maven("io.grpc:grpc-stub"),
    maven("io.grpc:grpc-protobuf"),
    maven("org.testcontainers:testcontainers"),
    maven("org.testcontainers:junit-jupiter"),
    maven("org.testcontainers:gcloud"),
    maven("org.slf4j:slf4j-api"),
]

java_test(
    name = "SpannerAdapterTest",
    srcs = ["SpannerAdapterTest.java"],
    jvm_flags = [
        "-De2e.spannerVersion=%s" % SPANNER_EMULATOR_VERSION,
        "-De2e.spannerProject=%s" % SPANNER_PROJECT,
        "-De2e.spannerInstance=%s" % SPANNER_INSTANCE,
        "-De2e.spannerDatabase=%s" % SPANNER_DATABASE,
        "-De2e.spannerMode=%s" % SPANNER_MODE,
    ],
    test_package = "elide.driver.spanner",
    deps = [
        "//java/elide/driver/spanner:SpannerAdapter",
        "//java/elide/driver/spanner:SpannerDriver",
        "//java/elide/driver/spanner:SpannerGeneratedDDL",
        "//java/elide/driver/spanner:SpannerDriverSettings",
        "//java/elide/driver/inmemory:InMemoryCache",
        "//java/elide/model:PersistenceOperationFailed",
        "//javatests/elide/model:GenericPersistenceAdapterTest",
        javaproto("//javatests/elide/model:person"),
    ] + _COMMON_DEPS,
)

java_test(
    name = "SpannerDDLTest",
    srcs = ["SpannerDDLTest.java"],
    test_package = "elide.driver.spanner",
    deps = [
        "//java/elide/driver/spanner:SpannerGeneratedDDL",
        "//java/elide/driver/spanner:SpannerDriverSettings",
        javaproto("//javatests/elide/model:person"),
    ] + _COMMON_DEPS,
)

java_test(
    name = "SpannerManagerTest",
    srcs = ["SpannerManagerTest.java"],
    test_package = "elide.driver.spanner",
    deps = [
        "//java/elide/driver/spanner:SpannerManager",
        "//java/elide/driver/spanner:SpannerDriverSettings",
        "//java/elide/driver/spanner:SpannerTransportConfig",
        "//java/elide/driver/spanner:SpannerAdapter",
        javaproto("//javatests/elide/model:person"),
    ] + _COMMON_DEPS,
)

java_test(
    name = "SpannerTemporalConverterTest",
    srcs = ["SpannerTemporalConverterTest.java"],
    test_package = "elide.driver.spanner",
    deps = [
        "//java/elide/driver/spanner:SpannerTemporalConverter",
        javaproto("//javatests/elide/model:person"),
    ] + _COMMON_DEPS,
)

java_test(
    name = "SpannerUtilTest",
    srcs = ["SpannerUtilTest.java"],
    test_package = "elide.driver.spanner",
    deps = [
        "//java/elide/driver/spanner:SpannerGeneratedDDL",
        "//java/elide/driver/spanner:SpannerDriverSettings",
        javaproto("//elide/proto/core:datamodel"),
        javaproto("//javatests/elide/model:person"),
        "//java/elide/driver/spanner:SpannerUtil",
        "//java/elide/model:ModelMetadata",
    ] + _COMMON_DEPS,
)

test_suite(
    name = "spanner",
    tests = [
        ":SpannerAdapterTest",
        ":SpannerDDLTest",
        ":SpannerManagerTest",
        ":SpannerTemporalConverterTest",
        ":SpannerUtilTest",
    ],
)
